# plate-tool

./: Cargo.toml  Dioxus.toml  Jenkinsfile  README.md  index.html
.gitea/workflows/: beta-deploy.yaml
assets/css/: global.css  plate.css
assets/js/: screenshot_utility.js
assets/scss/: index.scss
assets/scss/default_theme/: _variables.scss  main.scss
assets/scss/default_theme/components/: _dialog.scss  _index.scss  _main_window.scss  _plate_container.scss  _plates.scss  _transfer_menu.scss  _tree.scss  _upper_menu.scss
src/: lib.rs  main.rs
src/components/: main_window.rs  mod.rs  new_plate_dialog.rs  plate.css  source_plate.rs  states.rs  transfer_menu.rs  tree.rs
src/components/plates/: destination_plate.rs  mod.rs  plate.css  plate_container.css  plate_container.rs  source_plate.rs  source_plate_old.rs  util.rs
src/data/: csv.rs  mod.rs  plate.rs  plate_instances.rs  transfer.rs  transfer_region.rs
