[package]
name = "plate-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/dioxuslabs/dioxus.git" }
dioxus-web = { git = "https://github.com/dioxuslabs/dioxus.git" }
fermi = { git = "https://github.com/dioxuslabs/dioxus" } # Yikes
log = "0.4"
wasm-logger = "0.2"
regex = "1"
lazy_static = "1.4"
